--- a/Users/pom.xml
+++ b/Users/pom.xml
@@ -4,21 +4,22 @@
                              http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>3.2.1</version>
+        <relativePath/> <!-- lookup parent from repository -->
+    </parent>
     <groupId>com.ceudev</groupId>
-    <artifactId>logger</artifactId>
-    <version>1.0.0</version>
-    <packaging>jar</packaging>
-
-    <name>Logger</name>
-    <description>A microservice logger for testing Proof of concept</description>
-
+    <artifactId>User</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <name>Users</name>
+    <description>User Microservice</description>
     <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
+        <java.version>17</java.version>
     </properties>
 
     <dependencies>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
