--- a/Users/pom.xml
+++ b/Users/pom.xml
@@ -11,10 +11,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.ceudev</groupId>
-    <artifactId>User</artifactId>
+    <artifactId>Users</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>Users</name>
-    <description>User Microservice</description>
+    <description>Users Microservice</description>
     <properties>
         <java.version>17</java.version>
     </properties>
